# GV-Validator

./: .env.example  .gitignore  FEASIBILITY_ASSESSMENT.md  README.md  pyproject.toml  spec.md
src/vra/: __init__.py  cli.py  models.py  pdf_protocol.py  pdf_report.py  reconciliation.py  runner.py  vlm.py
